[gd_scene load_steps=4 format=3 uid="uid://wo2wtbuyw82k"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_jrax3"]
[ext_resource type="Texture2D" uid="uid://7y5avbmef2vf" path="res://RedcoatRegimentSimplified.png" id="2_mw8ku"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_so4y2"]
size = Vector2(27.2001, 112)

[node name="Player" type="CharacterBody2D"]
rotation = -1.57079
script = ExtResource("1_jrax3")

[node name="ShootStart" type="Marker2D" parent="."]
position = Vector2(56.0001, 7.99965)
rotation = 0.0504976

[node name="PlayerCollisionShape" type="CollisionShape2D" parent="."]
position = Vector2(2.38419e-07, -1.49593e-12)
scale = Vector2(5, 5)
shape = SubResource("RectangleShape2D_so4y2")

[node name="Timers" type="Node2D" parent="."]

[node name="ShootTimer" type="Timer" parent="Timers"]
wait_time = 0.25
one_shot = true

[node name="RedcoatRegimentSimplified" type="Sprite2D" parent="."]
rotation = 1.56994
texture = ExtResource("2_mw8ku")

[connection signal="timeout" from="Timers/ShootTimer" to="." method="_on_shoot_timer_timeout"]
